CHANGE dark mode to side menu, ADD vars color and text

--- a/src/components/side-menu/Side-menu.css
+++ b/src/components/side-menu/Side-menu.css
@@ -42,3 +42,15 @@
   align-items: center;
   justify-content: end;
 }
+
+.dark-toggle-div {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.dark-text {
+  padding: 0 10px;
+  font-size: large;
+}
