--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,6 +3,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   padding: 10px 20px;
   background-color: var(--background-color);
+}
+
+.Toggle-switch-div {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+  font-size: 14px;
+  color: var(--text-color);
 }
