--- a/src/items/toggle-switch/Toggle-switch.css
+++ b/src/items/toggle-switch/Toggle-switch.css
@@ -13,7 +13,7 @@
 .toggle-switch .thumb {
   height: 20px;
   width: 20px;
-  background-color: #fff;
+  background-color: #6f6f6f;
   border-radius: 99px;
   transform: translateX(0);
   transition: left 0.15s ease;
@@ -34,4 +34,5 @@
 
 .toggle-switch.toggled .thumb {
   left: calc(50px - 30px);
+  background-color: #fff;
 }
